[package]
name = "helm-rs-workspace"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[workspace]
members = [
  "crates/helm-rs-abi",
  "crates/helm-rs-events",
  "crates/helm-rs-kube",
  "crates/helm-rs-runtime",
  "crates/helm-rs-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/helm-rs"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
libloading = "0.8"
hex = "0.4"
kube = { version = "0.96", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.23", features = ["v1_30"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
helm-rs-abi = { path = "crates/helm-rs-abi" }
helm-rs-cli = { path = "crates/helm-rs-cli" }
libloading.workspace = true
serde_json.workspace = true
tempfile.workspace = true
