[package]
name = "chartwright-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "chartwright"
path = "src/main.rs"

[lib]
name = "chartwright_cli"
path = "src/lib.rs"

[dependencies]
clap.workspace = true
chartwright-events = { path = "../chartwright-events" }
chartwright-runtime = { path = "../chartwright-runtime" }
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
