[package]
name = "helm-rs-abi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libloading = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[features]
default = ["loader"]
loader = ["dep:libloading"]

[dev-dependencies]
tempfile.workspace = true
