[package]
name = "helm-rs-kube"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
helm-rs-events = { path = "../helm-rs-events" }
hex.workspace = true
kube.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
k8s-openapi.workspace = true
